Re-arrange sass files and folders

--- a/assets/sass/site/_site.scss
+++ b/assets/sass/site/_site.scss
@@ -6,6 +6,11 @@
 @import "posts-and-pages";
 
 /*--------------------------------------------------------------
+## Accessibility
+--------------------------------------------------------------*/
+@import "accessibility";
+
+/*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
 @import "comments";
