--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -45,40 +45,25 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 --------------------------------------------------------------*/
 @import "bourbon";
 @import "bourbon", "neat";
-@import "variables-site/variables-site";
-@import "mixins/mixins-master";
+@import "variables/variables";
+
+
+
 
 /*--------------------------------------------------------------
 # Normalize
 --------------------------------------------------------------*/
-@import "normalize";
+@import "normalize/normalize";
 
 /*--------------------------------------------------------------
 # Elements
 --------------------------------------------------------------*/
+@import "sassline-base/sassline-base";
 @import "elements/elements";
-
-/*--------------------------------------------------------------
-# Navigation
---------------------------------------------------------------*/
-@import "navigation/navigation";
-
-/*--------------------------------------------------------------
-# Accessibility
---------------------------------------------------------------*/
-@import "modules/accessibility";
-
-/*--------------------------------------------------------------
-# Clearings
---------------------------------------------------------------*/
-@import "modules/clearings";
 
 /*--------------------------------------------------------------
 # Content
 --------------------------------------------------------------*/
+
 @import "site/site";
 
-/*--------------------------------------------------------------
-# Infinite scroll
---------------------------------------------------------------*/
-@import "modules/infinite-scroll";
